--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@babel/core": "7.14.6",
     "@testing-library/react": "^12.0.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
-    "babel-eslint": "10.1.0",
+    //"babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "babel-preset-react-app": "10.0.0",
     "css-loader": "5.2.6",
@@ -72,7 +72,7 @@
       "plugin:import/errors",
       "plugin:import/warnings"
     ],
-    "parser": "babel-eslint",
+    "parser": "babel/eslint-parser",
     "parserOptions": {
       "ecmaVersion": 2018,
       "sourceType": "module",
