--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@babel/core": "7.14.6",
     "@testing-library/react": "^12.0.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
-    //"babel-eslint": "10.1.0",
+    "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "babel-preset-react-app": "10.0.0",
     "css-loader": "5.2.6",
@@ -51,6 +51,7 @@
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-mock-store": "1.5.4",
     "rimraf": "3.0.2",
+    "stable": "^0.1.8",
     "style-loader": "3.0.0",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "4.4.2",
@@ -72,7 +73,7 @@
       "plugin:import/errors",
       "plugin:import/warnings"
     ],
-    "parser": "babel/eslint-parser",
+    "parser": "babel-eslint",
     "parserOptions": {
       "ecmaVersion": 2018,
       "sourceType": "module",
