--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
+    "@babel/eslint-parser": "^7.18.9",
+    "@babel/preset-react": "^7.18.6",
     "@testing-library/react": "^12.0.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
-    "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "babel-preset-react-app": "10.0.0",
     "css-loader": "5.2.6",
@@ -73,12 +74,11 @@
       "plugin:import/errors",
       "plugin:import/warnings"
     ],
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
     "parserOptions": {
-      "ecmaVersion": 2018,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true
+      "requireConfigFile": false,
+      "babelOptions": {
+        "presets": ["@babel/preset-react"]
       }
     },
     "env": {
