--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -45,6 +45,8 @@ jobs:
 
     - name: npm install, build, and test
       run: |
+        npm cache clean --force
+        npm set strict-ssl true
         npm install
         npm run build --if-present
         npm run test --if-present
