--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.2",
     "react-redux": "7.2.4",
     "react-router-dom": "5.2.0",
+    "react-scripts": "^5.0.1",
     "react-toastify": "7.0.4",
     "redux": "4.1.0",
     "redux-thunk": "2.3.0",
@@ -78,7 +79,9 @@
     "parserOptions": {
       "requireConfigFile": false,
       "babelOptions": {
-        "presets": ["@babel/preset-react"]
+        "presets": [
+          "@babel/preset-react"
+        ]
       }
     },
     "env": {
