--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start:dev": "webpack serve --config webpack.config.dev.js --port 3000",
     "prestart:api": "node tools/createMockDb.js",
     "start:api": "node tools/apiServer.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "build": "node build",
+    "test": "node test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
