--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start:dev": "webpack serve --config webpack.config.dev.js --port 3000",
     "prestart:api": "node tools/createMockDb.js",
     "start:api": "node tools/apiServer.js",
-    "build": "react-scripts build src/index.html",
+    "build":"run build src/index.html", 
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
